[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-terraform-test-runner"
version = "0.2"
description = "Test Runner for unit testing Terraform Config"
url = "https://github.com/UKHomeOffice/dq-aws-transition-testing"
authors = [
      { name = "UK Home Office" }
]
license = { text = "MIT" }
#packages = ['.']
zip_safe = false

dependencies = [
      # Linters
      "pylint==2.17.4",
      # Testing
      "coverage==7.2.7",
      # CI/CD
      "drone",
      "docker"
]
